[gd_scene load_steps=5 format=3 uid="uid://pc54oaofruqg"]

[ext_resource type="Script" path="res://Scenes/UI/SettingsPopup/settings.gd" id="1_1rj4w"]
[ext_resource type="Theme" uid="uid://cur1si5sm4vmn" path="res://Assets/UI/Menu/CubetopiaTheme.tres" id="1_yeuds"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3j8l"]
content_margin_left = 20.0
content_margin_top = 50.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.231373, 0.231373, 0.231373, 0.768627)

[sub_resource type="Gradient" id="Gradient_ehij4"]
offsets = PackedFloat32Array(0, 0.333, 0.667, 1)
colors = PackedColorArray(1, 0.17, 0.17, 1, 1, 0.816, 0.08, 1, 0.644, 1, 0.11, 1, 0.14, 0.885333, 1, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yeuds")
script = ExtResource("1_1rj4w")

[node name="SettingsMenu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 429.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w3j8l")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="PresetSection" type="Label" parent="SettingsMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.682353, 0.917647, 1, 1)
text = "Apply Preset"
horizontal_alignment = 1

[node name="Presets" type="HBoxContainer" parent="SettingsMenu/VBoxContainer"]
visible = false
layout_mode = 2

[node name="VeryLowPreset" type="Button" parent="SettingsMenu/VBoxContainer/Presets"]
layout_mode = 2
size_flags_horizontal = 3
text = "Very Low"

[node name="LowPreset" type="Button" parent="SettingsMenu/VBoxContainer/Presets"]
layout_mode = 2
size_flags_horizontal = 3
text = "Low"

[node name="MediumPreset" type="Button" parent="SettingsMenu/VBoxContainer/Presets"]
layout_mode = 2
size_flags_horizontal = 3
text = "Medium"

[node name="HighPreset" type="Button" parent="SettingsMenu/VBoxContainer/Presets"]
layout_mode = 2
size_flags_horizontal = 3
text = "High"

[node name="UltraPreset" type="Button" parent="SettingsMenu/VBoxContainer/Presets"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ultra"

[node name="HSeparator" type="HSeparator" parent="SettingsMenu/VBoxContainer"]
visible = false
layout_mode = 2

[node name="UISection" type="Label" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.683425, 0.916893, 1, 1)
text = "User Interface Settings"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="UIScaleLabel" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "UI Scale:"

[node name="UIScaleOptionButton" type="OptionButton" parent="SettingsMenu/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
selected = 2
item_count = 5
popup/item_0/text = "Smaller (66%)"
popup/item_1/text = "Small (80%)"
popup/item_1/id = 1
popup/item_2/text = "Medium (100%)"
popup/item_2/id = 2
popup/item_3/text = "Large (133%)"
popup/item_3/id = 3
popup/item_4/text = "Larger (200%)"
popup/item_4/id = 4

[node name="ViewportSection" type="Label" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.683425, 0.916893, 1, 1)
text = "Video Settings"
horizontal_alignment = 1

[node name="GridContainer2" type="GridContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="QualityLabel" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Resolution Scale:"

[node name="QualitySlider" type="HSlider" parent="SettingsMenu/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.25
max_value = 2.0
step = 0.05
value = 1.0

[node name="FilterLabel" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Display Filter:"

[node name="FilterOptionButton" type="OptionButton" parent="SettingsMenu/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
selected = 0
item_count = 2
popup/item_0/text = "Bilinear (Fastest)"
popup/item_1/text = "FSR 1.0 (Fast)"
popup/item_1/id = 1

[node name="FSRSharpnessLabel" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "FSR Sharpness:"

[node name="FSRSharpnessSlider" type="HSlider" parent="SettingsMenu/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 2.0
step = 0.2
value = 0.2

[node name="FullscreenLabel" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Fullscreen:"

[node name="FullscreenOptionButton" type="OptionButton" parent="SettingsMenu/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
selected = 0
item_count = 2
popup/item_0/text = "Disabled"
popup/item_1/text = "Enabled"
popup/item_1/id = 1

[node name="VsyncLabel" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "V-Sync:"

[node name="VsyncOptionButton" type="OptionButton" parent="SettingsMenu/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
selected = 0
item_count = 3
popup/item_0/text = "Disabled"
popup/item_1/text = "Adaptive"
popup/item_1/id = 1
popup/item_2/text = "Enabled"
popup/item_2/id = 2

[node name="LimitFPSLabel" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Limit FPS:"

[node name="LimitFPSSlider" type="HSlider" parent="SettingsMenu/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 300.0
step = 10.0

[node name="TAALabel" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Anti-Aliasing (TAA):"

[node name="TAAOptionButton" type="OptionButton" parent="SettingsMenu/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
selected = 0
item_count = 2
popup/item_0/text = "Disabled (Fastest)"
popup/item_1/text = "Enabled (Average)"
popup/item_1/id = 1

[node name="MSAALabel" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Anti-Aliasing (MSAA):"

[node name="MSAAOptionButton" type="OptionButton" parent="SettingsMenu/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
selected = 0
item_count = 4
popup/item_0/text = "Disabled (Fastest)"
popup/item_1/text = "2× (Average)"
popup/item_1/id = 1
popup/item_2/text = "4× (Slow)"
popup/item_2/id = 2
popup/item_3/text = "8× (Slower)"
popup/item_3/id = 3

[node name="FXAALabel" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Anti-Aliasing (FXAA):"

[node name="FXAAOptionButton" type="OptionButton" parent="SettingsMenu/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
selected = 0
item_count = 2
popup/item_0/text = "Disabled (Fastest)"
popup/item_1/text = "Enabled (Fast)"
popup/item_1/id = 1

[node name="FOVLabel" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Field of View:"

[node name="FOVSlider" type="HSlider" parent="SettingsMenu/VBoxContainer/GridContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 50.0
value = 50.0

[node name="ViewportSection2" type="Label" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.683425, 0.916893, 1, 1)
text = "Audio Settings"
horizontal_alignment = 1

[node name="GridContainer3" type="GridContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Master" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Master

"

[node name="AudioSlider1" type="HSlider" parent="SettingsMenu/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -40.0
max_value = 1.0
step = 0.05

[node name="Voice" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Voice

"

[node name="AudioSlider2" type="HSlider" parent="SettingsMenu/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -40.0
max_value = 1.0
step = 0.05

[node name="SFX" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "SFX

"

[node name="AudioSlider3" type="HSlider" parent="SettingsMenu/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -40.0
max_value = 1.0
step = 0.05

[node name="Music" type="Label" parent="SettingsMenu/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Music
"

[node name="AudioSlider4" type="HSlider" parent="SettingsMenu/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -40.0
max_value = 1.0
step = 0.05

[node name="HideButton" type="Button" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 16
text = "Done"

[node name="FPSLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 39.0
grow_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 2
metadata/gradient = SubResource("Gradient_ehij4")

[node name="ResolutionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 48.0
offset_right = -16.0
offset_bottom = 71.0
grow_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 2

[connection signal="pressed" from="SettingsMenu/VBoxContainer/Presets/VeryLowPreset" to="." method="_on_very_low_preset_pressed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/Presets/LowPreset" to="." method="_on_low_preset_pressed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/Presets/MediumPreset" to="." method="_on_medium_preset_pressed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/Presets/HighPreset" to="." method="_on_high_preset_pressed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/Presets/UltraPreset" to="." method="_on_ultra_preset_pressed"]
[connection signal="item_selected" from="SettingsMenu/VBoxContainer/GridContainer/UIScaleOptionButton" to="." method="_on_ui_scale_option_button_item_selected"]
[connection signal="value_changed" from="SettingsMenu/VBoxContainer/GridContainer2/QualitySlider" to="." method="_on_quality_slider_value_changed"]
[connection signal="item_selected" from="SettingsMenu/VBoxContainer/GridContainer2/FilterOptionButton" to="." method="_on_filter_option_button_item_selected"]
[connection signal="value_changed" from="SettingsMenu/VBoxContainer/GridContainer2/FSRSharpnessSlider" to="." method="_on_fsr_sharpness_slider_value_changed"]
[connection signal="item_selected" from="SettingsMenu/VBoxContainer/GridContainer2/FullscreenOptionButton" to="." method="_on_fullscreen_option_button_item_selected"]
[connection signal="item_selected" from="SettingsMenu/VBoxContainer/GridContainer2/VsyncOptionButton" to="." method="_on_vsync_option_button_item_selected"]
[connection signal="value_changed" from="SettingsMenu/VBoxContainer/GridContainer2/LimitFPSSlider" to="." method="_on_limit_fps_slider_value_changed"]
[connection signal="item_selected" from="SettingsMenu/VBoxContainer/GridContainer2/TAAOptionButton" to="." method="_on_taa_option_button_item_selected"]
[connection signal="item_selected" from="SettingsMenu/VBoxContainer/GridContainer2/MSAAOptionButton" to="." method="_on_msaa_option_button_item_selected"]
[connection signal="item_selected" from="SettingsMenu/VBoxContainer/GridContainer2/FXAAOptionButton" to="." method="_on_fxaa_option_button_item_selected"]
[connection signal="value_changed" from="SettingsMenu/VBoxContainer/GridContainer2/FOVSlider" to="." method="_on_fov_slider_value_changed"]
[connection signal="value_changed" from="SettingsMenu/VBoxContainer/GridContainer3/AudioSlider1" to="." method="_on_audio_slider_1_value_changed"]
[connection signal="value_changed" from="SettingsMenu/VBoxContainer/GridContainer3/AudioSlider2" to="." method="_on_audio_slider_2_value_changed"]
[connection signal="value_changed" from="SettingsMenu/VBoxContainer/GridContainer3/AudioSlider3" to="." method="_on_audio_slider_3_value_changed"]
[connection signal="value_changed" from="SettingsMenu/VBoxContainer/GridContainer3/AudioSlider4" to="." method="_on_audio_slider_4_value_changed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/HideButton" to="." method="_on_hide_button_pressed"]
